--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="styles.css">
-</head>
-<body>
-	<p>This is crazy</p>
-	
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Beautiful Web Page</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <h1> Wow, Git and GitHub are pretty neat</h1>
+  </body>
 </html>
